kubernetes/weather-app-demo/overlay/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app-demo-deployment
spec:
  replicas: 3 # Number of pod replicas to run
  template:
    spec:
      containers:
        - name: weather-app-demo-container
          image: registry/weather-app-demo:v1.0.0prod # Container image and version
          resources: # Resource requests and limits
            requests:
              memory: "256Mi"
              cpu: "300m"
            limits:
              memory: "512Mi"
              cpu: "600m"
