kubernetes/weather-app-demo/overlay/production/mongo-db-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-db
spec:
  replicas: 3
