kubernetes/weather-app-demo/overlay/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-app-demo-ingress
spec:
  ingressClassName: nginx # Use nginx ingress controller
  rules:
  - host: weather-app-demo.nip.io # Host for the ingress
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-app-demo-service # Backend service name
            port:
              number: 5000
